--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
       </div>
 
-      <div class="row">
+      <div class="row tri-schpeal">
           <div class="span4">
             <h2>About Us</h2>
-
+            <p>We are a chapter of College Democrats. Surely someone can write better copy than I can.</p>
             <div class="center">
               <a href="#" class="fauxbutton">Read More</a>
             </div>
