--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
 
     <div class="brand">
-    <a href="#"><img src="logo.png" class="logo" alt="Northeastern Democrats Logo"/></a></div>
+    <a href="#"><img src="img/logo.png" class="logo" alt="Northeastern Democrats Logo"/></a></div>
 
     <div class="menubar">
       <ul>
